--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,5 +4,5 @@
 @import "{{ site.theme }}";
 
 .page-header {
-    background-color: red;
+    background-image: url('/assets/img/NewZealand.jpg');
 }
