--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,4 +5,61 @@
 
 .page-header {
     background-image: url('/assets/img/NewZealand.jpg');
+    background-position: left;
+}
+
+
+/**
+ * Site footer
+ */
+
+ $spacing-unit:     30px !default;
+ $grey-color:       #828282 !default;
+ $grey-color-light: lighten($grey-color, 40%) !default;
+ $base-font-size:   16px !default;
+ $on-palm:          600px !default;
+ $on-laptop:        800px !default;
+ @mixin relative-font-size($ratio) {
+    font-size: $base-font-size * $ratio;
+  }
+
+ .site-footer {
+    border-top: 1px solid $grey-color-light;
+    padding: $spacing-unit 0;
+  }
+  
+  .footer-heading {
+    @include relative-font-size(1.125);
+    margin-bottom: $spacing-unit / 2;
+  }
+  
+  .contact-list,
+  .social-media-list {
+    list-style: none;
+    margin-left: 0;
+    padding: 0;
+  }
+  
+  .footer-col-wrapper {
+    @include relative-font-size(0.9375);
+    color: $grey-color;
+    margin-left: -$spacing-unit / 2;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 0;
+  }
+
+  .svg-icon {
+    width: 22px;
+    height: 16px;
+    display: inline-block;
+    fill: #{$grey-color};
+    padding-right: 5px;
+    vertical-align: text-top;
+}
+
+.social-media-list {
+  li + li {
+    padding-top: 5px;
+  }
 }
