--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,23 +10,23 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
-    <ul class="post-list">
+    <div class="posts">
       {%- for post in site.posts -%}
-      <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
-      </li>
+      <a class="post-box" href="{{ post.url | relative_url }}">
+        <div class="tags">
+          {%- for tag in post.tags -%}
+          <span>{{ tag }} </span>
+          {%- endfor -%}
+        </div>
+        <div class="title">
+          {{ post.title | escape }}
+        </div>
+          
+        <p>{{ post.excerpt | truncatewords: 80 }}</p>
+      </span>
+      </a>
       {%- endfor -%}
-    </ul>
+    </div>
 
     <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%}
