--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,8 +8,9 @@ body {
 }
 
 .page-header {
-    background-image: url('/assets/img/NewZealand.jpg');
-    background-position: left;
+  background: transparent;
+  background-image: url('/assets/img/NewZealand.jpg');
+  background-position: left;
 }
 
 .home {
@@ -116,5 +117,13 @@ body {
   grid-column-gap: 30px;
   width: 90%;
   margin: 0 auto;
+  font-size: .8rem;
+}
+
+.home-link {
+  position: relative;
+  top: -70px;
+  opacity: 0.7;
+  color: #fff;
   font-size: .8rem;
 }
