--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -73,7 +73,10 @@ body {
 
 .posts {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, minmax(250px, 1fr));
+  @media (max-width: 600px) {
+    grid-template-columns: repeat(1, minmax(250px, 1fr));
+  }
   grid-gap: 20px;
   grid-auto-rows: 267px;
 
@@ -89,6 +92,9 @@ body {
 
     &:first-of-type {
       grid-column: span 3;
+      @media (max-width: 600px) {
+        grid-column: span 1;
+      }
     }
 
     &:hover {
