--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,7 @@ body {
 .page-header {
   background-image: url('/assets/img/NewZealand.jpg');
   background-position: left;
+  background-size: cover;
 }
 
 .home {
