--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,16 +24,9 @@
           <div class="footer-col-wrapper">
             <div>
               <ul class="contact-list">
-                <li class="p-name">
-                  {%- if site.author -%}
-                    {{ site.author | escape }}
-                  {%- else -%}
-                    {{ site.title | escape }}
-                  {%- endif -%}
-                  </li>
-                  {%- if site.email -%}
-                  <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-                  {%- endif -%}
+                <li class="p-name">{{ site.title }} © 2018</li>
+                <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+                <li><a href="/resume">Resume</a></li>
               </ul>
             </div>
       
