--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -71,6 +71,12 @@
   grid-auto-rows: 267px;
 
   .post-box {
+    display: block;
+    margin-bottom: 20px;
+    @supports(display: grid) {
+      display: initial;
+      margin-bottom: 0;
+    }
     background: white;
     box-shadow: 8px 14px 38px rgba(39,44,49,.06), 1px 3px 8px rgba(39,44,49,.03);
     border-radius: 5px;
