--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@ layout: default
           {{ post.title | escape }}
         </div>
           
-        <p>{{ post.excerpt | truncatewords: 80 }}</p>
+        <p>{{ post.excerpt | strip_html | truncatewords: 80 }}</p>
       </span>
       </a>
       {%- endfor -%}
