--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body style="background: #f4f8fb;">
-    <section class="page-header" style="background-image: url('/assets/img/NewZealand.jpg');background-position: left;background-size: cover;">
+    <section class="page-header" style="background-image: url('/assets/img/NewZealand.jpg');background-image: -webkit-image-set(url('/assets/img/NewZealand.webp') 1x);background-position: left;background-size: cover;">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
     </section>
