--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
+    <script>
+    window.addEventListener("load", function(){
+      window.cookieconsent.initialise({
+        "palette": {
+          "popup": {
+            "background": "#3c404d",
+            "text": "#d6d6d6"
+          },
+          "button": {
+            "background": "#8ec760"
+          }
+        },
+        "theme": "edgeless",
+        "position": "top",
+        "static": true
+      })});
+    </script>
   </head>
   <body style="background: #f4f8fb;">
     <section class="page-header" style="background-image: url('/assets/img/NewZealand.jpg');background-image: -webkit-image-set(url('/assets/img/NewZealand.webp') 1x);background-position: left;background-size: cover;">
