Make resume link more precise

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
               <ul class="contact-list">
                 <li class="p-name">{{ site.title }} © 2018</li>
                 <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-                <li><a href="/resume">Resume</a></li>
+                <li><a href="/resume/">Resume</a></li>
               </ul>
             </div>
       
