--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -145,3 +145,13 @@
     border: 1px solid $grey-color;
   }
 }
+
+.page-header {
+  background-color: transparent;
+  background-image: none;
+
+  img {
+    object-fit: cover;
+    object-position: left;
+  }
+}
