--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -146,6 +146,10 @@
   }
 }
 
+.post-content {
+  margin-top: -1rem;
+}
+
 .page-header {
   background-color: transparent;
   background-image: none;
@@ -155,3 +159,11 @@
     object-position: left;
   }
 }
+
+.page-heading {
+  .page-date {
+    font-size: .7em;
+    color: $grey-color;
+  }
+}
+
