Increase title size. don't shrink date. adjust date size

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -166,8 +166,9 @@
   align-items: flex-end;
 
   .page-date {
-    font-size: .7em;
+    font-size: .5em;
     color: $grey-color;
+    flex-shrink: 0;
   }
 }
 
